#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-11-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.61 released.

        * Modified Makefile.PL to download Term::Menus


2010-11-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.60 released.

        * Cleaned up search for Berkeley DB.

        * Modified Makefile.PL to download and compile
          BerkeleyDB if this C Library is not found on
          the host.


2010-10-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.59 released.

        * Modified Makefile.PL to load Term::Menus from
          included fai (f[ull]a[uto]i[nclude]) directory.


2010-10-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.58 released.

        * Removed the parentesis from 'use' statements 
          in FullAuto.pm.


2010-10-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.57 released.

        * Swapped position of MLDBM and MLDBM::Sync in
          Makefile.PL


2010-10-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.56 released.

        * Added test for BerkeleyDB to Makefile.PL


2010-10-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.55 released.

        * Adding 'use dependency' statements to FullAuto.pm
          in another attempt to fix broken CPAN testers
          results


2010-10-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.54 released.

        * Added MLDBM::Sync Bootstrap code to Makefile.PL in
          yet another attempt to fix CPAN testers results
