@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e92a9e7f26fe26399b51d51cc63f4478150fdc12 ChangeLog
+SHA1 33a3d426ced2d47c08ef73d91fab237ae545b7db ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 f6d33ef065500f8e7bbc0928e461ad79b6fdc1c0 META.yml
-SHA1 4179e6b71422bc3864ac1a83411684eecd7150fa Makefile.PL
+SHA1 021ce2af0604679e5a9a3ef12cbe01448773cb25 META.yml
+SHA1 1cfafaf149cdb7d8d20a283938f42f41c87573a5 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 8b93c40904bcbe3b343220a80bcfc0f77e20f5aa lib/Net/FullAuto.pm
+SHA1 1bf04caaac1e1d700bb9aab7e898e011bab8c36a lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkzYv4sACgkQdsVAdUjO9IkZPwCgq7DC+6Ts8Yi1zECA0CKHpwvV
-TccAnRZEfJRYsbtdKAFKsIWmAb2c9Fmq
-=34Tv
+iEYEARECAAYFAkzZd2kACgkQdsVAdUjO9IkpjgCfUuuIclFm9hMQwjCpWAcpMxwo
+VZoAnjJtp2946s962cQa+yCYESmTiGor
+=HRNZ
 -----END PGP SIGNATURE-----
