@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.61';
+our $VERSION='0.62';
 
 
 use 5.005;
